app/assets/stylesheets/application.tailwind.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  h1 {
    @apply text-2xl font-bold my-4;
  }
  h2 {
    @apply text-xl font-bold my-4;
  }
  hr {
    @apply mt-2 mb-2 h-0.5 bg-slate-300;
  }
}

@layer components {
  .btn {
    @apply py-2 px-4 font-semibold w-max rounded-full cursor-pointer;
  }

  .btn-primary {
    @apply text-white bg-green-500;
  }

  .btn-secondary {
    @apply text-gray-500 bg-slate-100 hover:bg-slate-200;
  }

  .profile-picture {
    @apply h-12 w-12 rounded-full object-cover;
  }

  .profile-picture-small {
    @apply h-9 w-9 rounded-full object-cover;
  }
}

